--- a/rss.html.html
+++ b/rss.html.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portada - Noticias</title>
     <style>
+        /* Estilos CSS */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -108,7 +109,8 @@
     <div id="news-list"></div>
 
     <script>
-        const RSS_URL = 'https://www.lavanguardia.com/rss/home.xml';
+        // URL del RSS con el proxy de CORS Anywhere
+        const RSS_URL = 'https://cors-anywhere.herokuapp.com/https://www.lavanguardia.com/rss/home.xml';
 
         // Función para obtener los datos RSS
         async function fetchRSS() {
@@ -140,6 +142,7 @@
                     <div class="title">${title}</div>
                 `;
 
+                // Evento click para abrir el popup
                 newsItem.addEventListener('click', () => openPopup(title, description, link));
                 newsList.appendChild(newsItem);
             });
@@ -161,5 +164,6 @@
         // Cargar las noticias al inicio
         renderNews();
     </script>
+
 </body>
 </html>
