--- a/portoli2.html
+++ b/portoli2.html
@@ -207,19 +207,19 @@
     <!-- Secció de Projectes -->
     <section id="projects" class="projects">
         <div class="project-card">
-            <img src="https://via.placeholder.com/300x200" alt="Projecte 1">
+            <img src="foto1.jpg" alt="Projecte 1">
             <h3>Projecte 1</h3>
             <p>Descripció breu del projecte 1.</p>
             <a href="project1.html" class="btn">Veure més</a>
         </div>
         <div class="project-card">
-            <img src="https://via.placeholder.com/300x200" alt="Projecte 2">
+            <img src="foto2.jpg" alt="Projecte 2">
             <h3>Projecte 2</h3>
             <p>Descripció breu del projecte 2.</p>
             <a href="project2.html" class="btn">Veure més</a>
         </div>
         <div class="project-card">
-            <img src="https://via.placeholder.com/300x200" alt="Projecte 3">
+            <img src="foto3.jpg" alt="Projecte 3">
             <h3>Projecte 3</h3>
             <p>Descripció breu del projecte 3.</p>
             <a href="project3.html" class="btn">Veure més</a>
