--- a/rss.html.html
+++ b/rss.html.html
@@ -1,168 +1,254 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="ca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portada - Noticias</title>
+    <title>Portfoli - Projectes Informàtics</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* Estilos CSS */
+        /* Paleta de colors */
+        :root {
+            --primary: #2A75C1; /* Azul principal */
+            --secondary: #1E9A3E; /* Verde */
+            --background: #F9F9F9; /* Fondo claro */
+            --text: #333333; /* Texto oscuro */
+            --accent: #FF6F61; /* Acento naranja */
+            --white: #FFFFFF; /* Blanco */
+        }
+
+        /* Estils generals */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: var(--background);
+            color: var(--text);
+            line-height: 1.6;
         }
 
-        #news-list {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            gap: 10px;
-            padding: 20px;
+        a {
+            text-decoration: none;
+            color: inherit;
         }
 
-        .news-item {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 300px;
-            overflow: hidden;
-            cursor: pointer;
+        /* Banner */
+        header {
+            background-color: var(--primary);
+            color: var(--white);
+            text-align: center;
+            padding: 20px 0;
         }
 
-        .news-item img {
+        header img {
             width: 100%;
             height: auto;
         }
 
-        .news-item .title {
-            padding: 15px;
-            font-size: 1.2em;
-            color: #333;
-            font-weight: bold;
+        /* Menú */
+        nav ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 10px;
         }
 
-        .popup {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
+        nav ul li a {
+            color: var(--white);
+            font-size: 16px;
+            text-transform: uppercase;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: var(--accent);
+        }
+
+        /* Secció de projectes */
+        .projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 40px;
+        }
+
+        .project-card {
+            background-color: var(--text);
+            color: var(--white);
+            border-radius: 10px;
+            overflow: hidden;
+            text-align: center;
+            padding: 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+
+        .project-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .project-card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+        }
+
+        .project-card h3 {
+            margin: 15px 0;
+        }
+
+        .project-card p {
+            margin: 10px 0;
+        }
+
+        .btn {
+            display: inline-block;
+            background-color: var(--secondary);
+            color: var(--white);
+            padding: 10px 20px;
+            text-transform: uppercase;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .btn:hover {
+            background-color: var(--accent);
+        }
+
+        /* Peu de pàgina */
+        footer {
+            background-color: var(--text);
+            color: var(--white);
+            padding: 20px;
+            text-align: center;
+        }
+
+        footer .social-icons {
+            display: flex;
             justify-content: center;
+            gap: 20px;
+            margin-bottom: 10px;
+        }
+
+        footer .social-icons a {
+            color: var(--white);
+            font-size: 20px;
+            transition: color 0.3s;
+        }
+
+        footer .social-icons a:hover {
+            color: var(--accent);
+        }
+
+        /* Aceptació de cookies */
+        .cookie-consent {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            background-color: var(--text);
+            color: var(--white);
+            text-align: center;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
             align-items: center;
             z-index: 1000;
         }
 
-        .popup-content {
-            background: white;
-            padding: 20px;
-            max-width: 800px;
-            width: 90%;
-            border-radius: 8px;
-            position: relative;
-        }
-
-        .popup-content h2 {
-            font-size: 1.5em;
-            color: #333;
-        }
-
-        .popup-content p {
-            color: #666;
-        }
-
-        .popup-content .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background: red;
-            color: white;
+        .cookie-consent button {
+            background-color: var(--accent);
+            color: var(--white);
+            padding: 8px 15px;
             border: none;
-            padding: 5px 10px;
+            border-radius: 5px;
             cursor: pointer;
-            border-radius: 4px;
+            transition: background-color 0.3s;
         }
 
+        .cookie-consent button:hover {
+            background-color: var(--secondary);
+        }
+
+        /* Responsive Design */
         @media (max-width: 768px) {
-            .news-item {
-                max-width: 100%;
+            nav ul {
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            .projects {
+                padding: 20px;
             }
         }
     </style>
 </head>
 <body>
 
-    <!-- Popup para mostrar noticias completas -->
-    <div class="popup" id="popup">
-        <div class="popup-content">
-            <button class="close-btn" onclick="closePopup()">Cerrar</button>
-            <h2 id="popup-title"></h2>
-            <p id="popup-description"></p>
-            <div id="popup-full-content"></div>
+    <!-- Banner i Menú -->
+    <header>
+        <img src="https://via.placeholder.com/1500x300" alt="Imatge del Banner">
+        <nav>
+            <ul>
+                <li><a href="#home">Inici</a></li>
+                <li><a href="#projects">Projectes</a></li>
+                <li><a href="#about">Sobre Mi</a></li>
+                <li><a href="#contact">Contacte</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Secció de Projectes -->
+    <section id="projects" class="projects">
+        <div class="project-card">
+            <img src="foto1.jpg" alt="Projecte 1">
+            <h3>Projecte 1</h3>
+            <p>Descripció breu del projecte 1.</p>
+            <a href="project1.html" class="btn">Veure més</a>
         </div>
+        <div class="project-card">
+            <img src="foto2.jpg" alt="Projecte 2">
+            <h3>Projecte 2</h3>
+            <p>Descripció breu del projecte 2.</p>
+            <a href="project2.html" class="btn">Veure més</a>
+        </div>
+        <div class="project-card">
+            <img src="foto3.jpg" alt="Projecte 3">
+            <h3>Projecte 3</h3>
+            <p>Descripció breu del projecte 3.</p>
+            <a href="project3.html" class="btn">Veure més</a>
+        </div>
+    </section>
+
+    <!-- Peu de pàgina -->
+    <footer>
+        <p>Segueix-me a les meves xarxes socials:</p>
+        <div class="social-icons">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        </div>
+        <p><a href="mailto:contacte@exemple.com">contacte@exemple.com</a></p>
+        <p><a href="#">RSS</a></p>
+    </footer>
+
+    <!-- Acceptació de Cookies -->
+    <div class="cookie-consent">
+        <p>Utilitzem cookies per millorar la teva experiència a la web. Si continuïs navegant, acceptes l'ús de cookies.</p>
+        <button onclick="acceptCookies()">Acceptar</button>
     </div>
 
-    <!-- Lista de noticias -->
-    <div id="news-list"></div>
-
     <script>
-        // URL del RSS con el proxy de CORS Anywhere
-        const RSS_URL = 'https://cors-anywhere.herokuapp.com/https://www.lavanguardia.com/rss/home.xml';
-
-        // Función para obtener los datos RSS
-        async function fetchRSS() {
-            const response = await fetch(RSS_URL);
-            const xmlText = await response.text();
-            const parser = new DOMParser();
-            const xmlDoc = parser.parseFromString(xmlText, "text/xml");
-
-            return xmlDoc.querySelectorAll('item');
+        function acceptCookies() {
+            document.querySelector('.cookie-consent').style.display = 'none';
         }
-
-        // Función para renderizar las noticias
-        async function renderNews() {
-            const items = await fetchRSS();
-            const newsList = document.getElementById('news-list');
-            newsList.innerHTML = '';
-
-            items.forEach(item => {
-                const title = item.querySelector('title').textContent;
-                const link = item.querySelector('link').textContent;
-                const description = item.querySelector('description').textContent;
-                const imgUrl = item.querySelector('enclosure') ? item.querySelector('enclosure').getAttribute('url') : '';
-                
-                const newsItem = document.createElement('div');
-                newsItem.classList.add('news-item');
-                
-                newsItem.innerHTML = `
-                    <img src="${imgUrl}" alt="${title}">
-                    <div class="title">${title}</div>
-                `;
-
-                // Evento click para abrir el popup
-                newsItem.addEventListener('click', () => openPopup(title, description, link));
-                newsList.appendChild(newsItem);
-            });
-        }
-
-        // Función para abrir el popup
-        function openPopup(title, description, link) {
-            document.getElementById('popup-title').textContent = title;
-            document.getElementById('popup-description').textContent = description;
-            document.getElementById('popup-full-content').innerHTML = `<a href="${link}" target="_blank">Seguir leyendo...</a>`;
-            document.getElementById('popup').style.display = 'flex';
-        }
-
-        // Función para cerrar el popup
-        function closePopup() {
-            document.getElementById('popup').style.display = 'none';
-        }
-
-        // Cargar las noticias al inicio
-        renderNews();
     </script>
 
 </body>
