--- a/rss.html.html
+++ b/rss.html.html
@@ -193,7 +193,7 @@
 
     <!-- Banner i Menú -->
     <header>
-        <img src="https://via.placeholder.com/1500x300" alt="Imatge del Banner">
+        <img src="foto0.jpg" alt="Imatge del Banner">
         <nav>
             <ul>
                 <li><a href="#home">Inici</a></li>
